Improved the link colors in dark theme to ensure good contrast.

--- a/client/src/scss/account.scss
+++ b/client/src/scss/account.scss
@@ -122,7 +122,7 @@
   }
 
   .link {
-    @apply text-blue-700 dark:text-blue-500 underline transition-[filter] hover:brightness-200 dark:hover:brightness-150 cursor-pointer;
+    @apply text-blue-700 dark:text-blue-400 underline transition-[filter] hover:brightness-200 dark:hover:brightness-150 cursor-pointer;
   }
 
   .triangle {
